--- a/WorkingWithVisualStudio/Views/Home/Index.cshtml
+++ b/WorkingWithVisualStudio/Views/Home/Index.cshtml
@@ -1,12 +1,17 @@
 ﻿@model IEnumerable<WorkingWithVisualStudio.Models.Product>
-@{ Layout = null; }
+@{ Layout = "_Layout"; }
+
 <!DOCTYPE html>
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Working with Visual Studio</title>
+    <link rel="stylesheet" href="css/bundle.min.css" />
+    <script src="js/bundle.min.js"></script>
 </head>
 <body>
+    <h3>Products</h3>
+    <p>Request Time: @DateTime.Now.ToString("HH:mm:ss")</p>
     <table>
         <thead>
             <tr><td>Name</td><td>Price</td></tr>
@@ -16,7 +21,7 @@
             {
                 <tr>
                     <td>@p.Name</td>
-                    <td>@p.Price</td>
+                    <td>@($"{p.Price:C2}")</td>
                 </tr>
             }
         </tbody>
